Bring dependencies up to date. Remove deprecated methods. Attempt to acquire ForeSquare user credentials from VM Properties